--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "DotCalendar",
+  "name": "dot-calendar-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator \"iPhone 15\"",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +30,8 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "reactotron-react-native": "^5.1.9",
+    "reactotron-redux": "^3.1.10",
     "typescript": "5.0.4"
   },
   "engines": {
