--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@reduxjs/toolkit": "^2.3.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-config": "^1.5.3",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^3.35.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
