test: react-native test code setting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -103,6 +103,7 @@
         ]
       }
     ],
-    "react/destructuring-assignment": "off"
+    "react/destructuring-assignment": "off",
+    "allowForLoopAfterthoughts": true
   }
 }
